--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -1,5 +1,5 @@
 
-\section{Derivatives, Part IIIa (Consequences)}
+\section{Derivatives, Part III (Consequences)}
 
 I reordered some content from Spivak's chapter for clarity, but kept
 theorem and corollary numbering scheme. Thus theorem numbers here
@@ -371,6 +371,11 @@ $h$\footnote{Note to derive $h'$ we treat $g(b)-g(a)$ and $f(b)-f(a)$
 
 ---\vs
 
+\textbf{Theorem 9 (L'H\^opital's rule.)} Suppose that (1)
+$\lim_{x\to a}f(x)=0$ and $\lim_{x\to a}g(x)=0$, and (2)
+$\lim_{x\to a}\frac{f'(x)}{g'(x)}$ exists. Then
+$\lim_{x\to a}\frac{f(x)}{g(x)}$ exists, and
+\[\lim_{x\to a}\frac{f(x)}{g(x)}=\lim_{x\to a}\frac{f'(x)}{g'(x)}\]
 
 
 %%% Local Variables:
