--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -35,9 +35,7 @@
 \clearpage
 \input{derivatives2b.tex}
 \clearpage
-\input{derivatives3a.tex}
-\clearpage
-\input{derivatives3b.tex}
+\input{derivatives3.tex}
 
 \end{document}
 
