back to L'H\^opital's rule

--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -375,10 +375,10 @@ $h$\footnote{Note to derive $h'$ we treat $g(b)-g(a)$ and $f(b)-f(a)$
 
 ---\vs
 
-\textbf{Theorem 9 (L'H\^opital's rule.)} Suppose that (1)
-$\lim_{x\to a}f(x)=0$ and $\lim_{x\to a}g(x)=0$, and (2)
-$\lim_{x\to a}\frac{f'(x)}{g'(x)}$ exists. Then
-$\lim_{x\to a}\frac{f(x)}{g(x)}$ exists, and
+\textbf{Theorem 9 (L'H\^opital's rule.)} Suppose that
+\[\lim_{x\to a}f(x)=0\qquad\text{and}\qquad\lim_{x\to a}g(x)=0\]
+
+Then\footnote{Of course assuming $\lim_{x\to a}\frac{f'(x)}{g'(x)}$ exists.}
 \[\lim_{x\to a}\frac{f(x)}{g(x)}=\lim_{x\to a}\frac{f'(x)}{g'(x)}\]
 
 \textbf{Proof.}
