--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -283,6 +283,28 @@ Thus by Corollary 3 of MVT:
 Thus $f$ has a local minimum at $a$, as desired\footnote{The proof for
   $f''(a)<0$ is similar.}
 
+\vs
+
+(Note that theorem 5 gives no information if $f''(a)=0$.)
+
+\vs---\vs
+
+\textbf{Theorem 6.} Suppose $f''(a)$ exists. If $f$ has a local
+minimum at $a$, then $f''(a)\geq0$; if $f$ has a local maximum at $a$,
+then $f''(a)\leq 0$.
+
+\vs
+
+\textit{Intuitively,} this is a partial converse of thereom 5.
+
+\vs
+
+\textbf{Proof.} Suppose $f$ has a local minimum at $a$. Suppose for
+contradiction $f''(a)<0$. Then by theorem 5 $f$ also has a local
+maximum at $a$. Thefore $f$ is constant in some interval around $a$,
+and so $f''(a)=0$. We have a contradiction, thus $f(a)\geq 0$, as
+desired.\footnote{The proof for $f''(a)>0$ is similar.}
+
 
 \subsection{Graph sketching}
 
