min max on closed intervals

--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -83,8 +83,21 @@ that we can find minimum and maximum values of $f$ by solving for
 $f'(x)=0$.
 
 \subsubsection*{On closed intervals}
+If $x$ is a maximum or minimum point for $f$ on $[a,b]$, then $x$ must
+be in one of three classes:
+\begin{enumerate}
+\item The critical points of $f$ in $[a,b]$.
+\item The end points $a$ and $b$.
+\item Points $x\in[a,b]$ such that $f$ is not differentiable at $x$.
+\end{enumerate}
+
+(If $x$ is not in second or third group, then $x\in(a,b)$ and $f'(x)$
+exists; thus $f'(x)=0$ by Theorem 1, and thus $x$ is in the first
+group.)
 
 \subsubsection*{On open intervals}
+
+
 
 \subsection{Mean Value Theorem}
 
