--- a/notes/continuity2.tex
+++ b/notes/continuity2.tex
@@ -401,7 +401,7 @@ QED.
 
 \textbf{Claim 3:} If $n$ is even and
 $f(x)=x^{n}+a_{n-1}x^{n-1}+\ldots+a_{0}$, then there is a number $y$ such
-that $f(y)\leq f(x)$ for all $x$.
+that $f(y)\leq f(x)$ for all $x$.\label{even-poly-root}
 
 \vs
 
