--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -97,7 +97,14 @@ group.)
 
 \subsubsection*{On open intervals}
 
-
+On open intervals we don't necessarily know minimum or maximum values
+exist, so these problems require creative work. For example, recall we
+showed even degree polynomials have a minimum value (see
+\ref{even-poly-root}). Now that we've done that work for even $n$ and
+$f(x)=x^{n}+a_{n-1}x^{n-1}+\ldots+a_{0}$, we can solve for $x$ in
+$f'(x)=0$ to find minimal values. But because the interval is open, we
+had to do the work in \ref{even-poly-root} to show minimal value
+exists first.
 
 \subsection{Mean Value Theorem}
 
