Closed intervals; chapter motivation

--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -1,9 +1,19 @@
 
 \section{Derivatives, Part III (Consequences)}
 
+This chapter builds up to two new capabilities. The first is graph
+sketching (or put differently, using features of the derivative to
+approximate shapes of functions). The second is L'H\^opital's rule,
+which allows us to take limits of the form $\frac{0}{0}$. We build up
+to these capabilities by studying the consequences of the derivative.
+On the way we prove the Mean Value Theorem, one of key calculus
+results.
+
+\vs
+
 I reordered some content from Spivak's chapter for clarity, but kept
-theorem and corollary numbering scheme. Thus theorem numbers here
-aren't in order (but they match the numbers in Spivak).
+the theorem and corollary numbering scheme. Thus theorem numbers here
+aren't in order, but they match the numbers in Spivak.
 
 \subsection{Maxima and manima}
 We start with some definitions. Let $f$ be a function and $A$ a set of
@@ -327,6 +337,7 @@ desired.\footnote{The proof for $f''(a)>0$ is similar.}
 
 
 \subsection{Graph sketching}
+
 
 \subsection{L'H\^opital's rule}
 We will build up to L'H\^opital's rule in the following way:
