--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -158,9 +158,8 @@ $f$ has at most $n-1$ critical points.
 
 \textbf{Proof.} This is easy. Observe that
 \[f'(x)=a_n n x^{n-1} + a_{n-1} (n-1) x^{n-2} + \dots + a_1\] Thus by
-previous claim, $f'$ has at most $n-1$ roots. Since for maximum and
-minimum points $f'(x)=0$ (theorem 1a), $f$ can have at most $n-1$
-maximum and minimum points, as desired.
+previous claim, $f'$ has at most $n-1$ roots, and thus at most $n-1$
+critical points.
 
 \vs---\vs
 
